--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@types/papaparse": "^5.3.16",
     "@types/recharts": "^2.0.1",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "papaparse": "^5.5.3",
